build: introduce multi-stage dockerfile